2017-01-20  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-599

	* controlfiles/general/agendas_surface.arts: Added
	specular_losCalc to all agndes using the Lambertian method, as
	this is now required.

	* It is now allowed to have several reflections for one pencil
	beam calculation. That was unintentionally restricted. For
	example, you can now have a ppath that is reflected from one side
	of a valley to the other side. However, there is no limit on the
	number of reflections and you can possibly end up in an infinite
	loop. That biggest risk here is the Lambertian function. If this
	happens, try to use a smaller number of beams.

	* src/m_surface.cc (surfaceLambertianSimple): Now takes
	surface_normal as input for safer handling of 2D and 3D. Added
	some notes about in the built-in doc.

	* src/m_rte.cc (iyEmissionStandard): Added ppath.np==1 in first if
	statement.

2017-01-20  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-598

	* src/m_cloudbox.cc (pnd_fieldCalcFromscat_speciesFields):

	Throw runtime error if a species in scat_meta is empty. Otherwise an
	assertion failure is generated later on in the pnd_field* functions
	(e.g. pnd_fieldS2M). Besides that it doesn't make sense to have an
	empty species. Reported by Freddy.

2017-01-20  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-597

	* src/m_checked.cc (cloudbox_checkedCalc):

	Fix check if scat_data_check_type is 'none' which always evaluated to
	true.

2017-01-19  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-596

	* src/m_cloudbox.cc (pnd_fieldZero): Now considers atmosphere_dim
	and checks that cloudbox_limits have the correct length. And now
	also handles 2D.

	* src/m_rte.cc (iyIndependentBeamApproximation): Now picks up and
	passes on iy_id.

2017-01-19  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-595

	* src/m_disort.cc (DisortCalc): Missed to adopt the dummy
	declaration of the function.
